# cloud-strategy-platform

./: .env.example  .gitignore  AGENTS.md  PROGRESS.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cloud_strategy_platform/: __init__.py  alpaca_market_data.py  alpaca_paper.py  api.py  artifacts.py  contracts.py  expressions.py  feature_store.py  market_data.py  market_health.py  platform.py  registry.py  runtime.py  sandbox.py  scope.py
deploy/strategy-sandbox/: Dockerfile  worker.py
docs/: API.md  PLATFORM_API_TARGET.md  openapi-v1.json
scripts/: __init__.py  install_local_api_task.ps1  issue_token.py  migrate_ai_credentials.py  register_strategy.py  run_local_api.ps1  run_local_sip_owner.ps1  run_sip_owner.py  serve_api.py
tests/: test_api_documentation.py  test_credential_migration.py  test_local_deployment.py  test_market_observability.py  test_platform.py  test_service_api.py  test_sip_owner.py
